--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         </title>
     </head>
 <body> 
-    <h1>Welcome to my Website</h1>
-    <h2>Hello, World!<h2>
+    <h1>Welcome to my Website!!<h1>
+    Hello, World!
 </body>
 </html>
